--- a/html-styling/page-setup.html
+++ b/html-styling/page-setup.html
@@ -12,7 +12,7 @@
 <meta charset="utf-8" />
 <title>Tutorials - HNN</title>
 <!-- import CSS style sheet from Github directory -->
-<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
+<link rel = "stylesheet" type = "text/css" href = "../html-styling/stylesheet.css" />
 </head>
 
 <!-- body styling -->
