--- a/alpha_and_beta/alpha_and_beta.html
+++ b/alpha_and_beta/alpha_and_beta.html
@@ -12,7 +12,7 @@
 <meta charset="utf-8" />
 <title>Tutorials - HNN</title>
 <!-- import CSS style sheet from Github directory -->
-<link rel = "stylesheet" type = "text/css" href = "https://raw.githubusercontent.com/jonescompneurolab/hnn-tutorials/master/html-styling/stylesheet.css" />
+<link rel = "stylesheet" type = "text/css" href = "../html-styling/stylesheet.css" />
 </head>
 
 <!-- body styling -->
