starting with data

--- a/starting-with-your-data/body_getting-started.html
+++ b/starting-with-your-data/body_getting-started.html
@@ -5,7 +5,7 @@
 <p><a href=""><img src="" alt="" width=90%/></a></p>
 -->
 <p align="center">
-<a href="https://raw.githubusercontent.com/jonescompneurolab/hnn-tutorials/master/Getting%20Started%20With%20Your%20Data/images/Step_Figure.bmp"><img src="https://raw.githubusercontent.com/jonescompneurolab/hnn-tutorials/master/Getting%20Started%20With%20Your%20Data/images/Step_Figure.bmp" alt="Step_Figure" width=70%/></a>
+<a href="https://raw.githubusercontent.com/jonescompneurolab/hnn-tutorials/master/starting-with-your-data/images/Step_Figure.bmp"><img src="https://raw.githubusercontent.com/jonescompneurolab/hnn-tutorials/master/starting-with-your-data/images/Step_Figure.bmp" alt="Step_Figure" width=70%/></a>
 </p>
 <p>Currently, source localization is an independent process (future releases of HNN will include an integration with MNE-Python and provide an all-in-one tool). If your data is not source-localized yet, you can perform this step with any software package you’re familiar with, such as <a href="www.martinos.org/mne">MNE-Python</a> or the MATLAB toolbox <a href="http://www.fieldtriptoolbox.org">FieldTrip</a>.</p>
 <p>In-depth tutorials describing how to perform source localizations are commonly provided by the appropriate software. In brief, source localization allows you to identify the brain region from which a given element of your EEG/MEG signal originated. This is a complex problem and several different algorithms have been developed to address it. Broadly, the source localization process involves the following steps, starting with raw EEG/MEG and structural magnetic resonance imaging (MRI) data:</p>
