added py script to style your md, tested on some tutorials

--- a/starting_with_data/getting-started.html
+++ b/starting_with_data/getting-started.html
@@ -87,7 +87,7 @@ function topFunction() {
 <!-- END -->
 <!-- pandoc -f markdown -t html -o getting-started.html getting-started.md -->
 <h2 id="getting-started-with-your-own-data">Getting started with your own data</h2>
-<p>Now that you’ve completed the tutorials, it’s time to get started using HNN to explore your own data! First, make sure your data is in the right format. HNN simulates primary current dipoles, i.e. the neural sources of the sensor-level EEG/MEG signal. This means that, for a direct comparison between your data and HNN simulations in units of nAm, your EEG/MEG has to be transformed into source-localized data (but see box below for how to use HNN with sensor data).</p>
+<p>Now that you’ve completed the tutorials, it’s time to get started using HNN to explore your own data! First, make sure your data is in the right format. HNN simulates primary current dipoles, i.e. the neural sources of the sensor-level EEG/MEG signal. This means that, for a direct comparison between your data and HNN simulations in units of nAm, your EEG/MEG has to be transformed into source-localized data (but see box below for how to use HNN with sensor data). Source localization provides insight into not only the location of the source of a given signal, but importantly, also the direction of the estimated net current in or out of the cortex, which corresponds to current flowing down or up the pyramidal neuron dendrites, respectively.</p>
 <!--
 <p><a href=""><img src="" alt="" width=90%/></a></p>
 -->
