--- a/alpha_and_beta/alpha_and_beta.html
+++ b/alpha_and_beta/alpha_and_beta.html
@@ -29,7 +29,7 @@
 
 <!-- add Tutorials header -->
 <div class="headercontainer main">
-<div class="headertext">Alpha and Beta</div>
+<div class="headertext">  </div>
 </div>
 
 <!-- set width for body to 900px -->
