updated stylesheet and erp tutorial

--- a/html-styling/page-setup.html
+++ b/html-styling/page-setup.html
@@ -9,7 +9,8 @@
 
 <!-- head area -->
 <head>
-<meta charset="utf-8" />
+<!-- <meta charset="utf-8" /> --> <!-- old version -->
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- set the viewport https://www.w3schools.com/css/css_rwd_viewport.asp -->
 <title>Tutorials - HNN</title>
 <!-- import CSS style sheet from Github directory -->
 <link rel = "stylesheet" type = "text/css" href = "../html-styling/stylesheet.css" />
