--- a/erp_updated-calcium/erp-calcium.html
+++ b/erp_updated-calcium/erp-calcium.html
@@ -86,7 +86,7 @@ function topFunction() {
 <!-- </body> -->
 <!-- </html> -->
 <!-- END -->
-<h1 id="event-related-potentials-erps">Event Related Potentials (ERPs)</h1>
+<h1 id="event-related-potentials-erps---updated-calcium">Event Related Potentials (ERPs) - Updated Calcium</h1>
 <h2 id="getting-started">Getting Started</h2>
 <p>In order to understand the workflow and initial parameter sets provided with this tutorial, we must first briefly describe prior studies that led to the creation of the provided data and evoked response parameter set that you will work with. This tutorial is based on results from our 2007 study where we recorded and simulated tactile evoked responses source localized to the primary somatosensory cortex (SI) [1].</p>
 <p>In our 2007 study, we investigated the early evoked activity (0-175 ms) elicited by a brief tap to the D3 digit and source localized to an an equivalent current dipole in the contralateral hand area of the primary somatosensory cortex (SI) [1]. The strength of the tap was set at either suprathreshold (100% detection probability) or perceptual threshold (50% detection) levels (see Figure 1, left panel below). Note, to be precise, this data represents source localized event related field (ERF) activity because it was collected using MEG. We use the terminology ERP for simplicity, since the primary current dipoles generating evoked fields and potentials are the same.</p>
