updated gui tutorial

--- a/gui/tour_gui.html
+++ b/gui/tour_gui.html
@@ -87,7 +87,7 @@ function topFunction() {
 <!-- </html> -->
 <!-- END -->
 <!-- pandoc -f markdown -t html -o tour_gui.html tour_gui.md -->
-<h1 id="tour-of-the-graphical-user-interface-gui">Tour of the Graphical User Interface (GUI)</h1>
+<h1 id="tour-of-the-gui-and-saving-model-data">Tour of the GUI and Saving Model Data</h1>
 <p>Here we provide an overview of the major GUI components, and provide a description of all the parameters that the GUI provides.</p>
 <p>This is a display of the GUI after running a simulation that produces an event-related potential (ERP; see ERP tutorial for more information on that simulation’s details).</p>
 <div class="stylefig" style="max-width:650px;">
@@ -110,7 +110,7 @@ function topFunction() {
 <h2 id="preliminaries-parameter-files">Preliminaries: Parameter Files</h2>
 <p>Before delving into the details of the GUI, we first provide an overview of the parameter files used by HNN. Parameter files are text-based and contain all the key parameters needed to run a model. These parameters include synaptic inputs, neuronal biophysics, and local network connectivity. HNN reads/writes these parameter files so you don’t have to edit them yourself.</p>
 <p>In order to facilitate effective modeling, we have provided a set of text-based parameter files that allow you to replicate event related potentials (ERPs), and alpha/beta/gamma rhythms. HNN can load the parameter files, allowing you to replicate the dynamics, see the critical parameter values that are responsible for the observed dynamics, and then modify the parameter files/values to observe the effect on dynamics. Parameter files are stored in the param subdirectory and can be viewed in any text editor. To load these parameter files into HNN, press the Set Parameters from File button, select the parameter file, and press enter. HNN will parse the file and display the values in the GUI. Then, running the simulation will use these parameter values.</p>
-<h2 id="setting-parameters">Setting Parameters</h2>
+<h2 id="setting-parameters-and-saving-model-data-on-your-computer">Setting Parameters and Saving Model Data on Your Computer</h2>
 <p>To view and set the parameters that control the simulation, press the Set Parameters button from the main GUI window. This will bring up the following dialog:</p>
 <div class="stylefig" style="max-width:250px;">
 <h3 id="figure-4">Figure 4</h3>
