update oscar instructions

--- a/workshop-instructions/instructions.html
+++ b/workshop-instructions/instructions.html
@@ -97,17 +97,15 @@ function topFunction() {
 <h2 id="logging-into-the-oscar-virtual-environment">Logging into the Oscar Virtual Environment</h2>
 <ol type="1">
 <li><p>Go to Oscar-on-Demand (OOD): <a href="https://ood.ccv.brown.edu/pun/sys/dashboard/batch_connect/sessions">ood.ccv.brown.edu/pun/sys/dashboard/batch_connect/sessions</a></p></li>
-<li><p>Type in the username provided via the workshop host.</p>
-<ul>
-<li>Note: there will be a physical sheet with usernames and their associated bypass codes</li>
-</ul></li>
+<li><p>Select a username from the <a href="https://docs.google.com/spreadsheets/d/1NQuCULv6Nmo1n7cHnsD5ZnEYtnxPeYUWzRBvaXFvliA/edit?usp=sharing">following spreadsheet</a> and add an “X” to the appropriate cell. The “X” is to indicate that the username you selected is “in use” so another participant doesn’t try to log in with the same username/bypass code</p></li>
+<li><p>Enter your selected username into ‘Username’ field of the login page</p></li>
+<li><p>Enter the password: HNNws2024*</p></li>
 </ol>
-<p><span style="max-width: 400px;"></p>
+<div style="max-width: 400px;">
 <p><img src="imgs/oscar_login.png" /></p>
-<p></span></p>
-<ol start="3" type="1">
-<li><p>Type in the password: <strong>TBD</strong></p></li>
-<li><p>From the DUO authentication screen, select “Other options” and then choose “Bypass code”, andd enter the bypass code associated with your username</p></li>
+</div>
+<ol start="5" type="1">
+<li>From the DUO authentication screen, select “Other options” and then choose “Bypass code”</li>
 </ol>
 <p><span style="max-width:800px"></p>
 <table>
@@ -121,6 +119,9 @@ function topFunction() {
 <tbody>
 </tbody>
 </table>
+<ol start="6" type="1">
+<li>Enter the bypass code associated with the username you selected in Step 2</li>
+</ol>
 <p></span></p>
 <h2 id="launching-hnn-core-gui-via-oscar">Launching HNN-Core GUI via Oscar</h2>
 <p>With the Oscar desktop instance open, open a terminal and type the following to activate the environment.</p>
