cleanup lists in oscar section

--- a/workshop-instructions/instructions.html
+++ b/workshop-instructions/instructions.html
@@ -128,31 +128,31 @@ function topFunction() {
 <li><p>Enter your selected username into ‘Username’ field of the login page</p></li>
 <li><p>Enter the password: HNNws2024*</p></li>
 </ol>
-<div style="max-width: 400px;">
-<p><img src="imgs/oscar_login.png" /></p>
-</div>
+<p><img src="imgs/oscar_login.png" width="400" /></p>
 <ol start="5" type="1">
-<li>From the DUO authentication screen, select “Other options” and then choose “Bypass code”</li>
+<li><p>
+From the DUO authentication screen, select “Other options” and then choose “Bypass code”
+</p></li>
 </ol>
-<div style="max-width:400px">
 <table>
 <thead>
 <tr class="header">
-<th><img src="imgs/duo_01.png" /></th>
-<th><img src="imgs/duo_02.png" /></th>
+<th><img src="imgs/duo_01.png" width="200" /></th>
+<th><img src="imgs/duo_02.png" width="200" /></th>
 </tr>
 </thead>
 <tbody>
 </tbody>
 </table>
-<ol type="1">
-<li>Enter the bypass code associated with the username you selected in Step 2</li>
+<ol start="6" type="1">
+<li><p>
+Enter the bypass code associated with the username you selected in Step 2
+</p></li>
 </ol>
-</div>
 <h3 id="launching-the-desktop-app-on-oscar">Launching the Desktop App on Oscar</h3>
 <ol type="1">
-<li>Choose the “Desktop (Advanced)” application. Note that this is different form the regular “Desktop” app.</li>
-<li>You will see a form. Enter the following in the fields.
+<li><p>Choose the “Desktop (Advanced)” application. Note that this is different form the regular “Desktop” app.</p></li>
+<li><p>You will see a form. Enter the following in the fields.</p>
 <ul>
 <li>Account: [Leave Blank]</li>
 <li>Desktop Environment: xfce</li>
@@ -164,7 +164,7 @@ function topFunction() {
 <li>Reservation: hnn-workshop</li>
 <li>Slurm Features: [Leave Blank]</li>
 </ul></li>
-<li>Click “Launch” . It may take a minute before the “Launch Desktop” button appears.</li>
+<li><p>Click “Launch” . It may take a minute before the “Launch Desktop” button appears.</p></li>
 </ol>
 <h3 id="launching-hnn-core-gui-via-oscar">Launching HNN-Core GUI via Oscar</h3>
 <p>With the Oscar desktop instance open, launch a Terminal via the “Terminal Emulator” at the bottom of the Desktop or via the Applications drop-down at the top-left of the Desktop.</p>
