add virtual sign in option

--- a/workshop-instructions/instructions.html
+++ b/workshop-instructions/instructions.html
@@ -88,6 +88,7 @@ function topFunction() {
 <!-- END -->
 <p><strong>Table of Contents</strong></p>
 <ul>
+<li><a href="#workshop-sign-in-optional-but-encouraged">Workshop Sign-In (Optional but Encouraged)</a></li>
 <li><a href="#cloning-the-hnn-data-repository">Cloning the HNN-Data Repository</a></li>
 <li><a href="#preferred-installation-method-google-colab">Preferred Installation Method: Google CoLab</a></li>
 <li><a href="#alternative-installation-methods">Alternative Installation Methods</a>
@@ -108,6 +109,12 @@ function topFunction() {
 </ul></li>
 </ul></li>
 </ul>
+<h1 id="workshop-sign-in-optional-but-encouraged">Workshop Sign-In (Optional but Encouraged)</h1>
+<p>Please consider ‘signing in’ to the workshop by providing your institution/location, position, and field of study. This information is used in reporting on milestones for the grants that continue to fund our dissemination and development. We don’t ask for name or email, and the form should take no more than 30 seconds to complete.</p>
+<p>Click <a href="https://forms.gle/YnZX9ZRm8WvWpAGU7">here</a> to navigate to our Virtual Sign-In Form.</p>
+<p>
+Thanks for your support. 😁
+</p>
 <h1 id="cloning-the-hnn-data-repository">Cloning the HNN-Data Repository</h1>
 <p>To follow along with the workshop, you’ll need the <a href="https://github.com/jonescompneurolab/hnn-data">hnn-data repository</a> on your local machine / virtual environment.</p>
 <p>You can download the file <a href="https://github.com/jonescompneurolab/hnn-data/archive/refs/heads/main.zip">here</a> or you can run the following command to clone the repository.</p>
